javaDSL/src/test/resources/typeSystemTestModels/valid/classes/NoProtectedOrPrivateTopLevelClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

public class NoProtectedOrPrivateTopLevelClass {

  private class A {

  }

  protected class B {

  }

}
