javaDSL/src/test/resources/typeSystemTestModels/invalid/classes/NoProtectedOrPrivateTopLevelClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.classes;

private class NoProtectedOrPrivateTopLevelClass {


}
